--- a/demo.html
+++ b/demo.html
@@ -21,25 +21,55 @@
 };
 </script>
 <style type="text/css">
-body{ font: 12px/1.5 Microsoft Yahei,simsun, sans-serif; margin: 0; height: 100%;}
+body{ font: 12px/1.5 Microsoft Yahei,simsun, sans-serif; margin: 0; }
+.full-body{ display: none; }
+.full-body-ready{ display: block; }
 .full-cnt{position: relative; width: 100%; height: 100%;}
 .full-cnt-txt{position: absolute; width: 200px; height: 200px; left: 50%; top:50%; font-size:200px; text-align:center; line-height:200px; margin:-100px 0 0 -100px;}
 .full-cnt01{ background: rgb(238, 0, 90); color:#ddd;}
 .full-cnt02{ background: rgb(51, 153, 204); color:#ddd; }
 .full-cnt03{ background: rgb(44, 62, 80); color:#ddd;}
 .full-cnt04{ background: #fff; color:#444;}
+
+.full-loading{position: fixed; z-index: 10; left: 50%; top: 50%;}
+.full-loading-i1,
+.full-loading-i2{ position: absolute; left: 0; top: 0;}
+.full-loading-i1:before,
+.full-loading-i2:before,
+.full-loading-i1:after,
+.full-loading-i2:after{ content:''; display: block; position: absolute; width: 10px; height: 10px; border-radius: 50%; background: #00a0e9;}
+.full-loading-i1:before{ left: 10px; top: -5px; width: 10px; height: 10px;} /* left */
+.full-loading-i1:after{ right: 8px; top: -7px; width: 14px; height: 14px;} /* right */
+.full-loading-i2:before{ left: -6px; top: 9px; width: 12px; height: 12px;} /* bottom */
+.full-loading-i2:after{ left: -8px; bottom: 7px; width: 16px; height: 16px;} /* top */
+
+/* 动画部分 */
 </style>
 </head>
 <body>
 <div class="full-body" id="box">
-    <div class="full-cnt full-cnt01"><span class="full-cnt-txt">1</span></div>
-    <div class="full-cnt full-cnt02"><span class="full-cnt-txt">2</span></div>
-    <div class="full-cnt full-cnt03"><span class="full-cnt-txt">3</span></div>
-    <div class="full-cnt full-cnt04"><span class="full-cnt-txt">4</span></div>
+    <div class="full-cnt full-cnt01">
+        <span class="full-cnt-txt">1</span>
+    </div>
+    <div class="full-cnt full-cnt02">
+        <span class="full-cnt-txt">2</span>
+    </div>
+    <div class="full-cnt full-cnt03">
+        <span class="full-cnt-txt">3</span>
+    </div>
+    <div class="full-cnt full-cnt04">
+        <span class="full-cnt-txt">4</span>
+    </div>
 </div>
+<div class="full-loading" id='loading'><i class="full-loading-i1"></i><i class="full-loading-i2"></i></div>
 <script type="text/javascript" charset="utf-8" src="js/fullslide.js"></script>
 <script type="text/javascript" charset="utf-8">
-fullslide('#box', {});
+//fullslide('#box', {
+//    currentClass: 'full-cnt-cur',
+//    ready: function(){
+//        this.className += ' full-body-ready';
+//    }
+//});
 </script>
 </body>
 </html>
