--- a/examples/demo.html
+++ b/examples/demo.html
@@ -27,12 +27,13 @@ body{ font: 12px/1.5 Microsoft Yahei,simsun, sans-serif; margin: 0; }
 </div>
 <script type="text/javascript" charset="utf-8" src="../js/fullslide.js"></script>
 <script type="text/javascript" charset="utf-8">
-var ctrl = fullslide('#box', {
-    currentClass: 'full-cnt-cur',
-    ready: function(){
-        this.className += ' full-body-ready';
-    }
-});
+var 
+    ctrl = fullslide('#box', {
+        currentClass: 'full-cnt-cur',
+        ready: function(){
+            this.className += ' full-body-ready';
+        }
+    });
 </script>
 </body>
 </html>
