--- a/examples/demo2.html
+++ b/examples/demo2.html
@@ -8,34 +8,96 @@
 <title>fullslide DEMO</title>
 <style type="text/css">
 body{ font: 12px/1.5 Microsoft Yahei,simsun, sans-serif; margin: 0; }
+.full-outset { height: 200px; }
 .full-body{ display: none; }
 .full-body-ready{ display: block; }
-.full-cnt{position: relative; width: 100%; height: 100%;}
-.full-cnt-txt{position: absolute; width: 200px; height: 200px; left: 50%; top:50%; font-size:200px; text-align:center; line-height:200px; margin:-100px 0 0 -100px;}
-.full-cnt01{ background: rgb(238, 0, 90); color:#ddd;}
-.full-cnt02{ background: rgb(51, 153, 204); color:#ddd; }
-.full-cnt03{ background: rgb(44, 62, 80); color:#ddd;}
-.full-cnt04{ background: #fff; color:#444;}
+.full-cnt{
+    position: relative; 
+    width: 100%; 
+    height: 100%;
+}
+.full-cnt-txt{
+    position: absolute; 
+    width: 200px; 
+    height: 200px; 
+    left: 50%; 
+    top:50%; 
+    font-size:200px; 
+    text-align:center; 
+    line-height:200px; 
+    margin:-100px 0 0 -100px;
+}
+.full-cnt01{ 
+    background: rgb(238, 0, 90); 
+    color:#ddd;
+}
+.full-cnt02{ 
+    background: rgb(51, 153, 204); 
+    color:#ddd; 
+}
+.full-cnt03{ 
+    background: rgb(44, 62, 80); 
+    color:#ddd;
+}
+.full-cnt04{ 
+    background: rgb(144, 62, 20);; 
+    color:#fff;
+}
+.full-ctrl {
+    margin-top: 10px;
+    display: block;
+    text-align: center;
+}
+.full-ctrl i {
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    border-radius: 100%;
+    background: #ddd;
+    overflow: hidden;
+    margin: 0 2px;
+}
+.full-ctrl i.cur {
+    background: #ff8900;
+}
 </style>
 </head>
 <body>
-<div class="full-body" id="box">
-    <div class="full-cnt full-cnt01"><span class="full-cnt-txt">1</span></div>
-    <div class="full-cnt full-cnt02"><span class="full-cnt-txt">2</span></div>
-    <div class="full-cnt full-cnt03"><span class="full-cnt-txt">3</span></div>
-    <div class="full-cnt full-cnt04"><span class="full-cnt-txt">4</span></div>
+<div class="full-outset">
+    <div class="full-body" id="box">
+        <div class="full-cnt full-cnt01"><span class="full-cnt-txt">1</span></div>
+        <div class="full-cnt full-cnt02"><span class="full-cnt-txt">2</span></div>
+        <div class="full-cnt full-cnt03"><span class="full-cnt-txt">3</span></div>
+        <div class="full-cnt full-cnt04"><span class="full-cnt-txt">4</span></div>
+    </div>
+</div>
+<div class="full-ctrl" id="ctrlbox">
+    <i></i>
+    <i></i>
+    <i></i>
+    <i></i>
 </div>
 <script type="text/javascript" charset="utf-8" src="../js/fullslide.js"></script>
 <script type="text/javascript" charset="utf-8">
-var ctrl = fullslide('#box', {
-    currentClass: 'full-cnt-cur',
-    ready: function(){
-        this.className += ' full-body-ready';
-        setInterval(function(){
-            ctrl.current = (ctrl.current + 1) % 4
-        }, 1000);
-    }
-});
+    !function(){
+        var ctrl = fullslide('#box', {
+            currentClass: 'full-cnt-cur',
+            fullpage: false,
+            direction: 'x',
+            loop: true,
+            auto: 3000,
+            ready: function(){
+                this.className += ' full-body-ready';
+            },
+            onchange: function(index){
+                var ctrlbox = document.getElementById('ctrlbox'),
+                    items = ctrlbox.children;
+                for(var i = 0, len = items.length; i < len; i++) {
+                    items[i].className = i == index? 'cur': '';
+                }
+            }
+        });
+    }();
 </script>
 </body>
 </html>
