[FIX] 修复横向滑动添加跳转地址没反应问题

--- a/examples/demo2.html
+++ b/examples/demo2.html
@@ -65,7 +65,7 @@ body{ font: 12px/1.5 Microsoft Yahei,simsun, sans-serif; margin: 0; }
 <body>
 <div class="full-outset">
     <div class="full-body" id="box">
-        <div class="full-cnt full-cnt01"><span class="full-cnt-txt">1</span></div>
+        <a target="_blank" href="http://www.jackness.org/" class="full-cnt full-cnt01"><span class="full-cnt-txt">1</span></a>
         <div class="full-cnt full-cnt02"><span class="full-cnt-txt">2</span></div>
         <div class="full-cnt full-cnt03"><span class="full-cnt-txt">3</span></div>
         <div class="full-cnt full-cnt04"><span class="full-cnt-txt">4</span></div>
